// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsComponent should mark tag as selected via "currentTag" @Input and set color of tag to "accent" 1`] = `
<app-tags
  currentTag={[Function String]}
  isErrorLoading="false"
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-6"
      role="listbox"
      tabindex="0"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
        <mat-chip
          aria-disabled="false"
          aria-selected="true"
          class="mat-chip mat-standard-chip mat-accent mat-chip-selected"
          ng-reflect-color="accent"
          ng-reflect-selected="true"
          role="option"
          tabindex="-1"
        >
          one
        </mat-chip>
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          two
        </mat-chip>
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          three
        </mat-chip>
      </div>
    </mat-chip-list>
    
    
  </div>
</app-tags>
`;

exports[`TagsComponent should show "tags" @Input 1`] = `
<app-tags
  currentTag=""
  isErrorLoading="false"
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-5"
      role="listbox"
      tabindex="0"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          one
        </mat-chip>
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          two
        </mat-chip>
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          three
        </mat-chip>
      </div>
    </mat-chip-list>
    
    
  </div>
</app-tags>
`;

exports[`TagsComponent should show "tags" @Input 2`] = `
<app-tags
  currentTag=""
  isErrorLoading="false"
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-5"
      role="listbox"
      tabindex="0"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
        <mat-chip
          aria-disabled="false"
          aria-selected="false"
          class="mat-chip mat-primary mat-standard-chip"
          ng-reflect-color=""
          ng-reflect-selected="false"
          role="option"
          tabindex="-1"
        >
          one
        </mat-chip>
      </div>
    </mat-chip-list>
    
    
  </div>
</app-tags>
`;

exports[`TagsComponent should show "tags" @Input 3`] = `
<app-tags
  currentTag=""
  isErrorLoading="false"
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-5"
      role="listbox"
      tabindex="0"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
        <mat-chip
          aria-disabled="false"
          aria-selected="true"
          class="mat-chip mat-standard-chip mat-accent mat-chip-selected"
          ng-reflect-color="accent"
          ng-reflect-selected="true"
          role="option"
          tabindex="-1"
        >
          
        </mat-chip>
      </div>
    </mat-chip-list>
    
    
  </div>
</app-tags>
`;

exports[`TagsComponent should show "tags" @Input 4`] = `
<app-tags
  currentTag=""
  isErrorLoading="false"
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-5"
      tabindex="-1"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
      </div>
    </mat-chip-list>
    
    
  </div>
</app-tags>
`;

exports[`TagsComponent should show error 1`] = `
<app-tags
  currentTag=""
  isErrorLoading={[Function Boolean]}
  isLoading="false"
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-9"
      tabindex="-1"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
      </div>
    </mat-chip-list>
    
    
    <div
      style="color: red;"
    >
      error loading tags
    </div>
  </div>
</app-tags>
`;

exports[`TagsComponent should show loader 1`] = `
<app-tags
  currentTag=""
  isErrorLoading="false"
  isLoading={[Function Boolean]}
  selecteTag={[Function EventEmitter]}
  tags={[Function Array]}
>
  <div
    class="tags"
  >
    <mat-chip-list
      aria-disabled="false"
      aria-invalid="false"
      aria-multiselectable="false"
      aria-orientation="horizontal"
      aria-required="false"
      class="mat-chip-list"
      id="mat-chip-list-8"
      tabindex="-1"
    >
      <div
        class="mat-chip-list-wrapper"
      >
        
      </div>
    </mat-chip-list>
    
    <mat-spinner
      class="mat-spinner mat-progress-spinner mat-primary mat-progress-spinner-indeterminate-animation"
      mode="indeterminate"
      role="progressbar"
      style="width: 100px; height: 100px;"
    >
      <svg
        focusable="false"
        ng-reflect-ng-switch="true"
        preserveAspectRatio="xMidYMid meet"
        style="width: 100px; height: 100px;"
        viewBox="0 0 100 100"
      >
        
        <circle
          cx="50%"
          cy="50%"
          r="45"
          style="stroke-dasharray: 282.7433388230814px; stroke-width: 10%;"
        />
        
      </svg>
    </mat-spinner>
    
  </div>
</app-tags>
`;
